--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next-redux-wrapper": "^8.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.0.5",
     "typescript": "4.8.4"
   }
 }
